--- a/templates/datasources.yml.j2
+++ b/templates/datasources.yml.j2
@@ -1,5 +1,8 @@
+{% for instance in tomcat_application_server_instances %}
 {% for ds in tomcat_application_datasources %}
-- name: "{{ ds.name }}"
+- path: "{{ instance.base }}/{{ tomcat_application_context_config }}"
+  name: "{{ ds.name }}"
   attributes_names: {{ ds.keys() | reject('equalto', 'name') | list | to_yaml }}
   attributes_values: {{ ds | to_yaml }}
+{% endfor %}
 {% endfor %}
