Refactored datasources path management.

--- a/templates/datasources.yml.j2
+++ b/templates/datasources.yml.j2
@@ -1,6 +1,6 @@
 {% for instance in tomcat_application_server_instances %}
 {% for ds in tomcat_application_datasources %}
-- path: "{{ instance.base }}/{{ tomcat_application_context_config }}"
+- base: "{{ instance.base }}"
   name: "{{ ds.name }}"
   attributes_names: {{ ds.keys() | reject('equalto', 'name') | list | to_yaml }}
   attributes_values: {{ ds | to_yaml }}
