--- a/templates/artifacts.yml.j2
+++ b/templates/artifacts.yml.j2
@@ -2,7 +2,7 @@
 {% for instance in tomcat_application_server_instances %}
 {% for artifact in tomcat_application_artifacts %}
 {% set override = {"id": "tomcat_application_" + tomcat_application_name + "_" + artifact.id,
-                   "dest": "%(base)/%(dest)" | format(base=instance.base, dest=artifact.dest),
+                   "dest": instance.base + "/" + artifact.dest,
                    "owner": instance.user,
                    "group": instance.group } %}
 {% set artifact = artifact | combine(override) %}
