--- a/templates/datasources.yml.j2
+++ b/templates/datasources.yml.j2
@@ -1,20 +1,14 @@
-{%- for instance in tomcat_application_server_instances -%}
-
-    {%- for tomcat_application_datasource in tomcat_application_datasources -%}
-
-        {%- if tomcat_application_datasource.template is defined -%}
-            {%- set tomcat_application_datasource_index = loop.index -%}
-            {%- set tomcat_application_datasource_template = lookup("vars", tomcat_application_datasource.template) -%}
-            {%- set ds = tomcat_application_datasource_template | combine(tomcat_application_datasource) -%}
-        {%- else -%}
-            {%- set ds = tomcat_application_datasource -%}
-        {%- endif -%}
-
-{#- -#} - base: "{{ instance.base }}"
-{#- -#}   name: "{{ ds.name }}"
-{#- -#}   attributes_names: {{ ds.keys() | reject('equalto', 'name') | list | to_json }}
-{#- -#}   attributes_values: {{ ds | to_json }}{{ "\n" }}
-
-    {% endfor %}
-
+{% set ns = namespace(found=false) %}
+{% for instance in tomcat_application_server_instances %}
+{% for ds in tomcat_application_datasources_templated %}
+{% set ns.found = true %}
+- base: "{{ instance.base }}"
+  name: "{{ ds.name }}"
+  attributes_names: {{ ds.keys() | list | reject('equalto', 'name') | list | to_json }}
+  attributes_values: {{ ds | to_json }}
 {% endfor %}
+{% endfor %}
+
+{% if not ns.found %}
+[]
+{% endif %}
