--- a/templates/artifacts.yml.j2
+++ b/templates/artifacts.yml.j2
@@ -4,7 +4,8 @@
 {% set override = {"id": "tomcat_application_" + tomcat_application_name + "_" + artifact.id,
                    "dest": instance.base + "/" + artifact.dest,
                    "owner": instance.user,
-                   "group": instance.group } %}
+                   "group": instance.group,
+                   "state": tomcat_application_state } %}
 {% set artifact = artifact | combine(override) %}
 {% set ns.found = true %}
 - {{ artifact | to_json }}
