--- a/templates/verify.yml.j2
+++ b/templates/verify.yml.j2
@@ -1,6 +1,6 @@
 {% for result in tomcat_application_manager_result.results | reject("skipped") | list %}
 {% set output = result.content.split("\n")
-                | select('search', '/' + tomcat_application_name + ':')
+                | select('search', '/' + tomcat_application_name_to_check + ':')
                 | list %}
 - instance: "{{ result.tomcat_application_instance }}"
 {% if output | length > 0 and (output | first).split(':').1 == "running" %}
